[package]
name = "intersect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = "1"
serde_json = "1.0.73"
futures = "0.3.19"
async-trait = "0.1.52"
web3 = "0.17.0"
textplots = "0.8"
fitting = "0.2.0"
ndarray = "0.13"
rgb = "*"